finishing touches. recolor done-ish

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<span class="prg"><img src="images/prg.svg" alt=""
-							width="250px" /></span>
-						<h1>Leilani Schimmelfennig</h1>
+						<span class="prg"><img src="images/prg-lblue.svg" alt=""
+							width="400px" /></span>
+						<h1>Leilani<br>Schimmelfennig</h1>
 						<!-- <p>Just another free, fully responsive site template<br />
 						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p> -->
 					</header>
@@ -30,9 +30,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Introduction</a></li>
-							<li><a href="#first">First Section</a></li>
+							<!-- <li><a href="#first">First Section</a></li> -->
 							<!-- <li><a href="#second">Second Section</a></li> -->
-							<li><a href="#cta">Get Started</a></li>
+							<li><a href="#cta">Currently</a></li>
 						</ul>
 					</nav>
 
@@ -44,21 +44,19 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>Web Developer</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+										<p>Motivated Full Stack Developer seeking to obtain experience by working on large scale projects.</p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a href="https://github.com/lschimm" class="button">Learn More</a></li>
 										</ul>
 									</div>
-									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+									<span class="image"><img src="images/cap.PNG" alt="" /></span>
 								</div>
 							</section>
 
 						<!-- First Section -->
-							<section id="first" class="main special">
+							<!-- <section id="first" class="main special">
 								<header class="major">
 									<h2>Magna veroeros</h2>
 								</header>
@@ -84,7 +82,7 @@
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
-							</section>
+							</section> -->
 
 						<!-- Second Section -->
 							<!-- <section id="second" class="main special">
@@ -126,14 +124,13 @@
 						<!-- Get Started -->
 							<section id="cta" class="main special">
 								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Currently...</h2>
+									<p>Studying to enhance knowledge and developing skills in Lambda.</p>
 								</header>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<!-- <li><a href="generic.html" class="button primary">Get Started</a></li>
+										<li><a href="generic.html" class="button">Learn More</a></li> -->
 									</ul>
 								</footer>
 							</section>
